# sourcegraph

./: go.mod  go.sum
client/browser/: CHANGELOG.md
cmd/frontend/graphqlbackend/: BUILD.bazel
cmd/frontend/internal/bg/: BUILD.bazel
cmd/gitserver/server/: BUILD.bazel  server.go
cmd/symbols/: Dockerfile.wolfi
cmd/worker/shared/: main.go
docker-images/prometheus/: Dockerfile.wolfi
enterprise/cmd/frontend/internal/auth/sourcegraphoperator/: BUILD.bazel  associate.go  associate_test.go  config.go  middleware.go  middleware_test.go  provider.go
enterprise/cmd/frontend/internal/authz/resolvers/: resolver.go
enterprise/cmd/worker/internal/auth/: BUILD.bazel  perms_syncer_scheduler.go  perms_syncer_scheduler_test.go  sourcegraph_operator_cleaner.go  sourcegraph_operator_cleaner_test.go
enterprise/cmd/worker/shared/: service.go  shared.go
enterprise/internal/own/: BUILD.bazel
internal/audit/: audit.go
internal/auth/: BUILD.bazel  backoff.go
internal/auth/sourcegraphoperator/: BUILD.bazel  util.go
internal/auth/userpasswd/: mocks_test.go
internal/database/: BUILD.bazel  schema.json  schema.md
internal/gitserver/: commands.go
internal/version/: version.go
migrations/frontend/: squashed.sql
schema/: schema.go  site.schema.json
